# stiffness_by_perturbation

./: CMakeLists.txt  README.md  compute.hpp  createFiles.hpp  datacontrols.sto  datastate.sto  main.cpp  old_main.cpp  scrap.txt  test.m
data/: GRFs.mot  RESULTS.txt  _controls.sto  _controls.xml  analyzeTool_setup.xml  appliedForce.sto  controls.sto  controls.xml  controls_copy.sto  externalForceLeft.xml  externalForceRight.xml  model_out.osim  outTemp.osim  scaled_controls.sto  scaled_controls.xml  scaled_pErr.sto  state.sto  subject5_final.osim  subject5_final_left.osim  subject5_final_right.osim
data/CMC/: CMC_Actuators_left.xml  CMC_Actuators_right.xml  CMC_ControlConstraints.xml  CMC_Load_left.xml  CMC_Load_right.xml  CMC_Tasks_left.xml  CMC_Tasks_right.xml  appliedForceGRFOnly.sto  constantStatesFile.sto
data/forward_out/: Model_prescaled_adjusted_scaled-scaled_controls.sto  Model_prescaled_adjusted_scaled-scaled_states.sto  Model_prescaled_adjusted_scaled-scaled_states_degrees.mot  _controls.sto  _states.sto  _states_degrees.mot  analyzeTool_BodyKinematics_acc_global.sto  analyzeTool_BodyKinematics_pos_global.sto  analyzeTool_BodyKinematics_vel_global.sto  model.osim
data/testforward/: Model_prescaled_adjusted_scaled-scaled_BodyKinematics_acc_global.sto  Model_prescaled_adjusted_scaled-scaled_BodyKinematics_pos_global.sto  Model_prescaled_adjusted_scaled-scaled_BodyKinematics_vel_global.sto  Model_prescaled_adjusted_scaled-scaled_controls.sto  Model_prescaled_adjusted_scaled-scaled_states.sto  Model_prescaled_adjusted_scaled-scaled_states_degrees.mot  (+1 more)
(+1 files in other folders)
